--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -3,13 +3,19 @@ image: ska-registry.av.it.pt/ska-docker/tango-builder:latest
 services:
 - docker:dind
 
+stages:
+    - install
+    - build
+
 install:
+  stage: install
   tags:
   - docker-executor
   script:
   - apt-add-repository --yes --update ppa:ansible/ansible && apt-get -y install ansible
 
 build:
+  stage: build
   tags:
   - docker-executor
   script:
