--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,4 +1,4 @@
-image: debian:stretch-slim
+image: ubuntu:18.04
 
 stages:
     - install
@@ -9,7 +9,9 @@ install:
   tags:
   - docker-executor
   script:
-  - apt-add-repository --yes --update ppa:ansible/ansible && apt-get -y install ansible
+  - apt-get update 
+  - apt-add-repository --yes --update ppa:ansible/ansible 
+  - apt-get -y install ansible
 
 build:
   stage: build
