--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -29,9 +29,9 @@ test_debian_stretch-slim:
   tags:
   - docker-executor
   script:
-  - apt-get install -y gnupg1 gnupg2
   - echo "deb http://ppa.launchpad.net/ansible/ansible/ubuntu trusty main" >> /etc/apt/sources.list
+  - gpg --keyserver hkp://keyserver.ubuntu.com:80 --recv-keys 93C4A3FD7BB9C367
   - apt-key adv --keyserver keyserver.ubuntu.com --recv-keys 93C4A3FD7BB9C367
   - apt-get update
-  - apt-get install ansible
+  - apt-get -y install ansible
   - ansible-playbook -i hosts deploy_tangoenv.yml
