--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -5,23 +5,23 @@ before_script:
     - apt-get install -y bash python apt-transport-https ca-certificates curl software-properties-common
     
 
-# test_ubuntu_latest:
-  # tags:
-  # - docker-executor
-  # script:  
-  # - apt-add-repository --yes --update ppa:ansible/ansible 
-  # - apt-get -y install ansible
-  # - ansible-playbook -i hosts deploy_tangoenv.yml
+test_ubuntu_latest:
+  tags:
+  - docker-executor
+  script:  
+  - apt-add-repository --yes --update ppa:ansible/ansible 
+  - apt-get -y install ansible
+  - ansible-playbook -i hosts deploy_tangoenv.yml
   
   
-# test_ubuntu_16:
-  # image: ubuntu:16.04
-  # tags:
-  # - docker-executor
-  # script:
-  # - apt-add-repository --yes --update ppa:ansible/ansible 
-  # - apt-get -y install ansible
-  # - ansible-playbook -i hosts deploy_tangoenv.yml
+test_ubuntu_16:
+  image: ubuntu:16.04
+  tags:
+  - docker-executor
+  script:
+  - apt-add-repository --yes --update ppa:ansible/ansible 
+  - apt-get -y install ansible
+  - ansible-playbook -i hosts deploy_tangoenv.yml
   
   
 test_debian_stretch-slim:
@@ -31,7 +31,6 @@ test_debian_stretch-slim:
   script:
   - echo "deb http://ppa.launchpad.net/ansible/ansible/ubuntu trusty main" >> /etc/apt/sources.list
   - apt-get install gnupg2 -y
-#  - gpg --keyserver hkp://keyserver.ubuntu.com:80 --recv-keys 93C4A3FD7BB9C367
   - apt-key adv --keyserver hkp://keyserver.ubuntu.com:80 --recv-keys 93C4A3FD7BB9C367
   - apt-get update
   - apt-get -y install ansible
