--- a/deploy_tangoenv.yml
+++ b/deploy_tangoenv.yml
@@ -8,11 +8,14 @@
     start_mysql_server: 'yes'
     install_pytango: 'yes'
     install_ide: 'yes'
+    install_ska_docker: 'yes'
+    start_tango: 'yes'
     pycharm_version: 'community-2018.3.3'
     TANGO_VERSION: '9.2.5a'
     ZEROMQ_VERSION: '4.0.5'
     OMNIORB_VERSION: '4.2.1'
     OMNIORB_VERSION_DETAIL: '4.2.1-2'
+    docker_compose_version: '1.23.2'
     #vscode version 1.30
   become: yes
   roles:
@@ -20,3 +23,4 @@
     - tango
     - pytango
     - ide
+    - ska-docker
