--- a/deploy_tangoenv.yml
+++ b/deploy_tangoenv.yml
@@ -8,8 +8,8 @@
     start_mysql_server: 'yes'
     install_pytango: 'yes'
     install_ide: 'yes'
-    install_ska_docker: 'yes'
-    start_tango: 'yes'
+    install_ska_docker: 'no'
+    start_tango: 'no'
     pycharm_version: 'community-2018.3.3'
     TANGO_VERSION: '9.2.5a'
     ZEROMQ_VERSION: '4.0.5'
