--- a/roles/ska-docker/tasks/main.yml
+++ b/roles/ska-docker/tasks/main.yml
@@ -102,10 +102,29 @@
   when: 
     - install_ska_docker == 'yes'
 
+- name: copy tango_ports_exposed.yml
+  copy:
+    src: "{{playbook_dir}}/roles/ska-docker/files/tango_ports_exposed.yml"
+    dest:  /usr/src/ska-docker/docker-compose/tango_ports_exposed.yml
+    mode: 0644
+  when: 
+    - start_tango == 'yes'
+    - install_ska_docker == 'yes'
+
+- name: Copy environment_tango.sh
+  copy:
+    src: "{{playbook_dir}}/roles/ska-docker/files/environment_tango.sh"
+    dest: /etc/profile.d/environment_tango.sh
+    mode: 0755
+    force: yes
+  when: 
+    - start_tango == 'yes'
+    - install_ska_docker == 'yes'
+
 - name: Start the tango system
   shell: |
     cd /usr/src/ska-docker/docker-compose 
-    make up
+    docker-compose -f tango_ports_exposed.yml up -d
   when:
     - start_tango == 'yes'
     - install_ska_docker == 'yes'
