--- a/roles/ska-docker/tasks/main.yml
+++ b/roles/ska-docker/tasks/main.yml
@@ -121,6 +121,19 @@
     - start_tango == 'yes'
     - install_ska_docker == 'yes'
 
+# is it working?
+- name: Stop MySql Server (if running)
+  service: 
+    name: mysql 
+    state: stopped
+    enabled: no
+  when: 
+    - start_mysql_server == 'yes'
+
+- name: Stop MySql Server (if running)
+  shell: service mysql stop 
+  when: start_mysql_server == 'yes'
+
 - name: Start the tango system
   shell: |
     cd /usr/src/ska-docker/docker-compose 
