--- a/roles/ska-docker/tasks/main.yml
+++ b/roles/ska-docker/tasks/main.yml
@@ -102,13 +102,14 @@
   when: 
     - install_ska_docker == 'yes'
 
-- git:
-    repo: 'https://github.com/ska-telescope/ska-docker.git'
-    dest: /usr/src/ska-docker
-    update: yes
-    ssh_opts: "-o StrictHostKeyChecking=no"
-  when: 
-    - install_ska_docker == 'yes'
+# - name: copy tango_ports_exposed.yml
+#   copy:
+#     src: "{{playbook_dir}}/roles/ska-docker/files/tango_ports_exposed.yml"
+#     dest:  /usr/src/ska-docker/docker-compose/tango_ports_exposed.yml
+#     mode: 0644
+#   when: 
+#     - start_tango == 'yes'
+#     - install_ska_docker == 'yes'
 
 - name: Copy environment_tango.sh
   copy:
@@ -137,6 +138,7 @@
   shell: |
     cd /usr/src/ska-docker/docker-compose 
     make up
+    make start tangotest
   when:
     - start_tango == 'yes'
     - install_ska_docker == 'yes'
