--- a/roles/tango/tasks/main.yml
+++ b/roles/tango/tasks/main.yml
@@ -27,7 +27,7 @@
         - default-jre-headless
   when: 
     - build_tango == 'yes'
-    - ansible_distribution == 'Ubuntu'
+    - ansible_distribution == 'Debian'
 
 - name: Install dependencies
   apt:
