--- a/roles/ska-docker/tasks/main.yml
+++ b/roles/ska-docker/tasks/main.yml
@@ -10,14 +10,14 @@
     - ansible_distribution == 'Debian'
     - install_ska_docker == 'yes'
 
-- name: Install list of packages 
+- name: Install apt-transport-https 
   apt:
     name:
     - apt-transport-https
   when: 
   - install_ska_docker == 'yes'
 
-- name: Install list of packages 
+- name: Install ca-certificates curl software-properties-common
   apt:
     name:
     - ca-certificates
@@ -78,8 +78,8 @@
 
 - name: Post installation Docker
   shell: |
-    groupadd docker
-    usermod -aG docker $USER
+    groupadd -f docker
+    usermod -a -G docker {{ ansible_user_id }}
   when: 
     - install_ska_docker == 'yes'
 
