--- a/deploy_tangoenv.yml
+++ b/deploy_tangoenv.yml
@@ -10,6 +10,7 @@
     install_ide: 'yes'
     install_ska_docker: 'yes'
     start_tango: 'yes'
+    update_hosts: 'yes'
     pycharm_version: 'community-2018.3.3'
     TANGO_VERSION: '9.2.5a'
     ZEROMQ_VERSION: '4.0.5'
@@ -24,3 +25,4 @@
     - tango
     - pytango
     - ska-docker
+    - updatehosts
