--- a/roles/integration/tasks/minikube.yml
+++ b/roles/integration/tasks/minikube.yml
@@ -32,11 +32,9 @@
     path: /usr/local/bin/minikube
   register: minikube_installed
 
-# download certificate from google?
-
 - name: Install minikube
   shell: |
-    curl -Lo minikube https://storage.googleapis.com/minikube/releases/v0.34.1/minikube-linux-amd64 && chmod +x minikube && mv minikube /usr/local/bin/
+    curl -kLo minikube https://storage.googleapis.com/minikube/releases/v0.34.1/minikube-linux-amd64 && chmod +x minikube && mv minikube /usr/local/bin/
   when: minikube_installed.stat.exists == false
 
 - name: Setting on minukube
