change host to integration

--- a/deploy_integrationenv.yml
+++ b/deploy_integrationenv.yml
@@ -1,7 +1,7 @@
 ---
 
 - name: deploy_integrationenv
-  hosts: development
+  hosts: integration
   vars:
     start_mysql_server: 'no'
     install_ska_docker: 'yes'
