--- a/roles/integration/tasks/minikube.yml
+++ b/roles/integration/tasks/minikube.yml
@@ -37,6 +37,13 @@
     curl -kLo minikube https://storage.googleapis.com/minikube/releases/v0.34.1/minikube-linux-amd64 && chmod +x minikube && mv minikube /usr/local/bin/
   when: minikube_installed.stat.exists == false
 
+- name: Copy /etc/gdm3/custom.conf
+  copy:
+    src: "{{playbook_dir}}/roles/integration/files/custom.conf"
+    dest: /etc/gdm3/custom.conf
+    mode: 0755
+    force: yes
+
 - name: Start minikube
   shell: |
     minikube start --vm-driver=none --extra-config=kubelet.resolv-conf=/var/run/systemd/resolve/resolv.conf
