ST-152 ignore if delete is not working

--- a/roles/integration/tasks/main.yml
+++ b/roles/integration/tasks/main.yml
@@ -16,6 +16,7 @@
   shell: |
     cd /usr/src/k8s-integration
     make delete KUBE_NAMESPACE=integration
+  ignore_errors: yes 
   when: k8sDir.stat.exists == true
 
 - name: Creates directory /usr/src/k8s-integration
