ST-152 add command line to show the integration

--- a/roles/integration/tasks/main.yml
+++ b/roles/integration/tasks/main.yml
@@ -35,4 +35,5 @@
   shell: |
     cd /usr/src/k8s-integration
     make deploy KUBE_NAMESPACE=integration
+    kubectl get all,pv,pvc -n integration
 
