--- a/roles/integration/tasks/main.yml
+++ b/roles/integration/tasks/main.yml
@@ -32,8 +32,8 @@
     ssh_opts: "-o StrictHostKeyChecking=no"
 
 - name: Start the integrated system
+  become_user: ubuntu
   shell: |
     cd /usr/src/k8s-integration
     make deploy KUBE_NAMESPACE=integration
     kubectl get all,pv,pvc -n integration
-
