--- a/roles/integration/tasks/minikube.yml
+++ b/roles/integration/tasks/minikube.yml
@@ -65,6 +65,7 @@
   become_user: "{{ ansible_user }}"
   shell: |
     sudo -E minikube start --vm-driver=none --extra-config=kubelet.resolv-conf=/var/run/systemd/resolve/resolv.conf
+    sudo -E minikube addons enable ingress
 
 - name: Setting on minukube
   shell: |
