--- a/deploy_integrationenv.yml
+++ b/deploy_integrationenv.yml
@@ -7,6 +7,8 @@
     install_ska_docker: 'yes'
     start_tango: 'no'
     docker_compose_version: '1.23.2'
+    remove_cluster: 'no'
+    stop_integrated_system: 'no'
   become: yes
   roles:
     - ska-docker
