ST-154 add ingress to kubectl get

--- a/roles/integration/tasks/main.yml
+++ b/roles/integration/tasks/main.yml
@@ -38,4 +38,4 @@
   shell: |
     cd /usr/src/k8s-integration
     make deploy KUBE_NAMESPACE=integration
-    kubectl get all,pv,pvc -n integration
+    kubectl get all,pv,pvc,ingress -n integration
