--- a/roles/integration/tasks/main.yml
+++ b/roles/integration/tasks/main.yml
@@ -1,41 +1,20 @@
 #
-- import_tasks: minikube.yml
-
-- name: Install make
-  apt:
-    name:
-    - make
-    update_cache: yes
-
-- name: Check if k8s-integration exists
-  stat: 
-    path: /usr/src/k8s-integration/Makefile
-  register: k8sDir
-
-- name: Stop the integrated system
-  shell: |
-    cd /usr/src/k8s-integration
-    make delete KUBE_NAMESPACE=integration
-  ignore_errors: yes 
+- name: Remove Minikube
+  import_tasks: remove.yml
   when: 
-  - k8sDir.stat.exists == true
+  - remove_cluster == 'yes'
+
+- name: Stop Integrated System
+  import_tasks: stop.yml
+  when: 
   - stop_integrated_system == 'yes'
 
-- name: Creates directory /usr/src/k8s-integration
-  file:
-    path: /usr/src/k8s-integration
-    state: directory
-  when: k8sDir.stat.exists == false
+- name: Install Minikube
+  import_tasks: minikube.yml
+  when: 
+  - deploy == 'yes'
 
-- git:
-    repo: 'https://github.com/ska-telescope/k8s-integration.git'
-    dest: /usr/src/k8s-integration
-    update: yes
-    ssh_opts: "-o StrictHostKeyChecking=no"
-
-- name: Start the integrated system
-  become_user: "{{ ansible_user }}"
-  shell: |
-    cd /usr/src/k8s-integration
-    make deploy KUBE_NAMESPACE=integration
-    kubectl get all,pv,pvc,ingress -n integration
+- name: Start System
+  import_tasks: start.yml
+  when: 
+  - deploy == 'yes'
