--- a/roles/integration/tasks/start.yml
+++ b/roles/integration/tasks/start.yml
@@ -27,3 +27,4 @@
     cd /usr/src/k8s-integration
     make deploy KUBE_NAMESPACE=integration
     kubectl get all,pv,pvc,ingress -n integration
+  when: start_integrated_system == 'yes'
