--- a/roles/integration/tasks/main.yml
+++ b/roles/integration/tasks/main.yml
@@ -17,7 +17,7 @@
 - name: Start System
   import_tasks: start.yml
   when: 
-  - deploy == 'yes'
+  - start_integrated_system == 'yes'
 
 - name: Logs
   import_tasks: logs.yml
