--- a/roles/integration/tasks/start.yml
+++ b/roles/integration/tasks/start.yml
@@ -25,6 +25,7 @@
   become_user: "{{ ansible_user }}"
   shell: |
     cd /usr/src/k8s-integration
+    kubectl apply -f resources/traefik-minikube.yaml
     make deploy KUBE_NAMESPACE=integration
     kubectl get all,pv,pvc,ingress -n integration
   when: start_integrated_system == 'yes'
