delete traefik when stop

--- a/roles/integration/tasks/stop.yml
+++ b/roles/integration/tasks/stop.yml
@@ -8,6 +8,7 @@
   shell: |
     cd /usr/src/k8s-integration
     make delete KUBE_NAMESPACE=integration
+    kubectl delete -f resources/traefik-minikube.yaml
   when: 
   - k8sDir.stat.exists == true
   - stop_integrated_system == 'yes'
