--- a/roles/pytango/tasks/main.yml
+++ b/roles/pytango/tasks/main.yml
@@ -32,10 +32,15 @@
     update_cache: yes
   when: install_pytango == 'yes'
 
-- name: Temporary fix - install libtango
+- name: Temporary fix - install libtango8v5 for Ubuntu-16
   apt:
     name:
       - libtango8v5
+  ignore_errors: True
+
+- name: Temporary fix - install libtango9 for Ubuntu-18
+  apt:
+    name:
       - libtango9
   ignore_errors: True
 
