--- a/roles/integration/tasks/start.yml
+++ b/roles/integration/tasks/start.yml
@@ -34,6 +34,8 @@
   shell: |
     cd /usr/src/k8s-integration
     kubectl apply -f resources/traefik-minikube.yaml
-    make deploy KUBE_NAMESPACE=integration
+    make deploy KUBE_NAMESPACE=integration HELM_CHART=tango-base
+    make deploy KUBE_NAMESPACE=integration HELM_CHART=tmc-proto
+    make deploy KUBE_NAMESPACE=integration HELM_CHART=webjive
     kubectl get all,pv,pvc,ingress -n integration
   when: start_integrated_system == 'yes'
