remove warning from curl usage

--- a/roles/helm-lint/tasks/main.yml
+++ b/roles/helm-lint/tasks/main.yml
@@ -12,6 +12,7 @@
     curl https://raw.githubusercontent.com/kubernetes/helm/master/scripts/get | bash
   when: 
   - install_helm == 'yes'
+  warn: false
 
 - name: Linting through charts
   import_tasks: multiple_charts.yml
